# physical-ai-book-piaic

./: .gitignore  railpack.toml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  deployment_config.py  docker-compose.yml  extracted_textbook_content.json  logging_config.py  main.py  metrics.py  optimization_report.json  processed_textbook_content.json  pyproject.toml  requirements.txt  test_chapter_specific.py  test_integration.py  test_selected_text.py  validation.py
backend/config/: settings.py
backend/models/: content.py  query.py
backend/routes/: chat.py  health.py
backend/scripts/: extract_textbook_content.py  ingest_textbook_content.py  optimize_parameters.py  process_textbook_content.py  run_ingestion_pipeline.py  run_ingestion_pipeline_simple.py  test_chapter_specific_handling.py  test_citation_accuracy.py  test_concurrent_handling.py  test_error_handling.py  test_hallucination_prevention.py  test_response_time.py  test_selected_text_functionality.py  validate_retrieval_accuracy.py  verify_content_indexing.py  verify_content_indexing_simple.py
backend/services/: agent.py  conversation.py  generation.py  ingestion.py  retrieval.py  vector_storage.py
backend/utils/: embedding.py  parsing.py
frontend/: docusaurus.config.ts  package-lock.json  sidebars.ts
frontend/docs/: intro.md
specs/001-ros2-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-gazebo-unity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+93 files in other folders)
